@@ -1,21 +1,27 @@
 use strict;
 use warnings;
 
-use File::Object;
+use IO::Scalar;
 use Tags::Output::Raw;
 use Test::More 'tests' => 3;
 use Test::NoWarnings;
-
-# Include helpers.
-do File::Object->new->up->file('get_stdout.inc')->s;
 
 # Test.
 my $obj = Tags::Output::Raw->new(
 	'output_handler' => \*STDOUT,
 	'xml' => 0,
 );
-my $ret = get_stdout($obj, 1, ['b', 'MAIN'], ['d', 'data'], ['e', 'MAIN']);
-is($ret, '<MAIN>data</MAIN>');
+$obj->put(
+	['b', 'MAIN'],
+	['d', 'data'],
+	['e', 'MAIN'],
+);
+my $ret;
+tie *STDOUT, 'IO::Scalar', \$ret;
+$obj->flush;
+untie *STDOUT;
+is($ret, '<MAIN>data</MAIN>', 'Test STDOUT output handler with explicit flush.');
+undef $ret;
 
 # Test.
 $obj = Tags::Output::Raw->new(
@@ -23,5 +29,12 @@ $obj = Tags::Output::Raw->new(
 	'output_handler' => \*STDOUT,
 	'xml' => 0,
 );
-$ret = get_stdout($obj, 1, ['b', 'MAIN'], ['d', 'data'], ['e', 'MAIN']);
-is($ret, '<MAIN>data</MAIN>');
+tie *STDOUT, 'IO::Scalar', \$ret;
+$obj->put(
+	['b', 'MAIN'],
+	['d', 'data'],
+	['e', 'MAIN'],
+);
+untie *STDOUT;
+is($ret, '<MAIN>data</MAIN>', 'Test STDOUT output handler with auto-flush.');
+undef $ret;
