@@ -1,4 +1,6 @@
 0.08
+ [Common]
+ - Remove helper get_stdout.inc in tests.
 
 0.07 2018-01-23T11:27:58+01:00
  [Common]
